chore: add tech favicon (svg) and reference in index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" href="/favicon.ico" sizes="any" />
     <title>MtsFerreira - Engenheiro de Software | Desenvolvimento de Sistemas</title>
     <meta name="description" content="Engenheiro de software especializado em desenvolvimento de aplicações, suporte técnico presencial e online, manutenção de sistemas. Soluções sob demanda em Palmas/TO." />
     <meta name="author" content="MtsFerreira" />
