--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg?v=2" />
     <link rel="icon" href="/favicon.ico" sizes="any" />
     <title>MtsFerreira - Engenheiro de Software | Desenvolvimento de Sistemas</title>
     <meta name="description" content="Engenheiro de software especializado em desenvolvimento de aplicações, suporte técnico presencial e online, manutenção de sistemas. Soluções sob demanda em Palmas/TO." />
@@ -13,13 +13,13 @@
     <meta property="og:title" content="MtsFerreira - Engenheiro de Software | Desenvolvimento de Sistemas" />
     <meta property="og:description" content="Especialista em soluções tecnológicas sob demanda, desenvolvimento de aplicações e suporte técnico em Palmas/TO." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/placeholder.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@mtsferreira" />
     <meta name="twitter:title" content="MtsFerreira - Engenheiro de Software" />
     <meta name="twitter:description" content="Desenvolvimento de sistemas, suporte técnico e soluções sob demanda" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/placeholder.svg" />
   </head>
 
   <body>
